--- a/src/CSS/calendar.css
+++ b/src/CSS/calendar.css
@@ -1,4 +1,3 @@
-
 .react-calendar { 
     width: 100%;
     max-width: 100%;
@@ -27,6 +26,7 @@
 /* Each individual day button*/
 .react-calendar__month-view__days__day{
     font-weight: bolder;
+    padding: 1.25em 0em;
 }
 
 /* Each individual Day Title ( Mon, Tue, Wed...)*/
@@ -41,3 +41,8 @@
     font-weight: bold;
    }
 
+.availableTime button{
+    margin: .25em;
+    background-color: #af99fa;
+    border-radius: 1em;
+} 
