--- a/src/CSS/create.css
+++ b/src/CSS/create.css
@@ -21,3 +21,12 @@ input {
   text-align: center;
   display: flex;
 }
+
+.selected{
+  font-weight: bold;
+  color: brown;
+}
+
+.btn{
+  margin: 0 .5em 1em .5em
+}
