--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,17 @@
   color: black;
 }
 
+h1 {
+  font-size: 2.5em;
+  font-weight: 700;
+}
+
+h2 {
+  font-weight: 300 !important;
+  color:lightgray;
+  font-size: 1.5em;
+}
+
 .App-logo {
   height: 10vmin;
   pointer-events: none;
